preproc_genlevel.cpp event mixing fixed; other minor fixed; before TrackCorrection development.

--- a/src/Makefile
+++ b/src/Makefile
@@ -102,11 +102,11 @@ UtilityTest.o : UtilityTest.cpp
 	$(CC) $(CFLAGS)-o $@ -c $<  
 
 # MC_CrosscheckFig
-../bin/MC_CrosscheckFig : MC_CrosscheckFig.o $(CMN) $(OBJS)
-	$(CC) $(LFLAGS) -o $@ $< $(OBJS) 
+../bin/MC_CrosscheckFig : MC_CrosscheckFig.o $(CMN) AnalysisBinning.o
+	$(CC) $(LFLAGS) -o $@ $<  AnalysisBinning.o
 
 MC_CrosscheckFig.o : MC_CrosscheckFig.cpp
-	$(CC) $(CFLAGS)-o $@ -c $<  
+	$(CC) $(CFLAGS)-o $@ -c $<  AnalysisBinning.o
 
 ###########################################
 ### *** Framework classes
