--- a/studies/PtResolution/Makefile
+++ b/studies/PtResolution/Makefile
@@ -1,27 +1,27 @@
-grojectDir=/afs/cern.ch/work/d/denglert/public/projects/PKPCorrelation_SLC6/CMSSW_5_3_20/src/denglert/PKPCorrelationAna
-
 ##################
 ### Process MC ###
 ##################
+# Command: Process
 
 AnalysisBinning = AnalysisBinning_HIN15007_MinBias
 #AnalysisBinning = AnalysisBinning_test
 
 #inputfile = root://eoscms.cern.ch//eos/cms/store/group/phys_heavyions/denglert/pPb_MC_HIJING_MB_HiForest_dEdxcalib_on_500kMCEv_1.9m_mtrkdedx_added_minptfix_trketafix/pPb_MC_HiForest_9_1_cNQ.root
 inputfile = root://eoscms.cern.ch//eos/cms/store/group/phys_heavyions/denglert/pPb_MC_HIJING_MB_HiForest_dEdxcalib_on_500kMCEv_1.9m_mtrkdedx_added_minptfix_trketafix/pPb_MC_mergedHiForest.root
-#tag       = HIJING_FULL
-tag       = HIJING_5k
-#nEvents   = -1
-nEvents   = 5000
+tag       = HIJING_FULL_pt_0.2-3.0
+#tag       = HIJING_10k
+nEvents   = -1
+#nEvents   = 10000
 PIDconfig = /afs/cern.ch/work/d/denglert/public/projects/PKPCorrelation_SLC6/CMSSW_5_3_20/src/denglert/PKPCorrelationAna/PIDUtils/config/config_default
 
 ###########
 ### Fit ###
 ###########
+# Command: Fit
 
-fit_tag       = HIJING_5k
+fit_tag       = HIJING_FULL_pt_0.2-3.0
+#fit_tag       = HIJING_10k
 fit_inputfile = PtResolutions_$(fit_tag).root
-
 
 ##########################################
 all:
@@ -48,3 +48,4 @@ fit : build
 
 build :
 	@cd ../../src; make build_PtResolutionStudy AnalysisBinning=$(AnalysisBinning); 
+
